test/files/neg/t0152.check
t0152.scala:10: error: illegal inheritance;
 object boom inherits different type instances of class Value:
Value[Int] and Value[java.lang.String]
 object boom extends Value[java.lang.String]("foo") with PlusOne
        ^
one error found
